# RedstoneEngineer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  RSLatch.litematic  remove_comments.py
.github/workflows/: release.yml
data/1.21.1/models/item/: _all.json  _list.json
packaging/: redstoneengineer.desktop.in  redstoneengineer.in
resources/: resources.qrc
sample/: RSLatch.rse  spread.rse
scripts/: download_textures.py  fetch_extra_textures.py  fetch_item_textures.py
src/: MainWindow.cpp  MainWindow.h  main.cpp
src/core/: Block.h  BlockModel.h  BlockModelLoader.cpp  BlockModelLoader.h  BlockStateLoader.cpp  BlockStateLoader.h  BuiltinModels.cpp  BuiltinModels.h  VoxelWorld.cpp  VoxelWorld.h
src/editor2d/: CommandHistory.cpp  CommandHistory.h  EditorCommand.cpp  EditorCommand.h  GridScene.cpp  GridScene.h  GridView.cpp  GridView.h
src/io/: LitematicExporter.cpp  LitematicExporter.h
src/palette/: BlockPalette.cpp  BlockPalette.h  PaletteGroup.cpp  PaletteGroup.h  PaletteItem.cpp  PaletteItem.h
src/preview3d/: Camera.cpp  Camera.h  ModelIconRenderer.cpp  ModelIconRenderer.h  VoxelMesh.cpp  VoxelMesh.h  VoxelRenderer.cpp  VoxelRenderer.h
src/sim/: RedstoneLogic.cpp  RedstoneLogic.h  SimEngine.cpp  SimEngine.h  SimFlags.h  TickScheduler.h
